--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "MongoDB tutorial",
   "main": "server.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd client && npm run build",
+    "install-client": "cd client && npm install",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "client": "cd client && npm start"
   },
   "author": "Dave Gray",
   "license": "ISC",
