--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
   "description": "MongoDB tutorial",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd client && npm run build",
-    "install-client": "cd client && npm install",
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "client": "cd client && npm start"
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "author": "Dave Gray",
   "license": "ISC",
